# backend

./: .gitignore  pyproject.toml  sqlite.db
mcp_playground/: client.py  langchain_client.py  main.py  server.py
mcp_playground/servers/: whether_server.py
runs/: database_start.sh  start.sh
src/: decoratorss.py  linkedin.py  main.py  schema.py
src/database_start/: database.py  main.py  models.py
src/start/: databases.py  main.py  schema.py
